# PyMoDAQ

./: .appveyor.yml  .gitignore  .travis.yml  CITATION.cff  LICENSE  MANIFEST.in  README-install guide.txt  README.md  README.rst  README.txt  __init__.py  environment.yml  pymodaq.srctrlbm  pymodaq.srctrlprj  pyproject.toml  readthedocs.yml  requirements.txt  script.bat  setup.cfg  setup.py  test.py  test.srctrlbm  test.srctrldb  test.srctrlprj  tox.ini
.github/workflows/: CI_build.yml  Testbase.yml  Testbase_win.yml  Testp310.yml  Testp310pyqt5.yml  Testp311pyqt5.yml  Testp311pyqt5_win.yml  Testp37.yml  Testp37pyqt5.yml  Testp37pyside2.yml  Testp38.yml  Testp38pyqt5.yml  Testp38pyqt5_win.yml  Testp38pyqt6.yml  Testp38pyside2.yml  Testp39.yml  Testp39pyqt5.yml  Testp39pyqt6.yml  python-publish.yml  updater.yml
DAQ_Analysis/: DAQ Analysis.bat  DAQ_Analysis.pyproj  DAQ_Analysis.sln  DAQ_analysis_main.py
DAQ_Analysis/setup/: dep_setup.py  make_dep.bat  pyAsk.bat  refresh_path.py
DAQ_Measurement/: DAQ Measurement.bat  DAQ_Measurement.pyproj  DAQ_Measurement.sln  DAQ_Measurement_main.py
DAQ_Move/: DAQ Move.bat  DAQ_Move_GUI.py  DAQ_Move_main.py  DAQ_move.pyproj  DAQ_move.sln  run DAQ_Move.bat  utility_classes.py
DAQ_Move/setup/: setup.bat  setup.py
DAQ_Navigation_Visu/: .spyderworkspace  DAQ_Navigation_Visu.pyproj  DAQ_Navigation_Visu.sln  DAQ_Navigation_Visu_Main.py  execute_DAQ_Navigation_Visu.bat  path_to_file.tdms
DAQ_Navigation_Visu/GUI/: DAQ_Navigation_Visu_GUI.py  DAQ_Navigation_Visu_GUI.ui
DAQ_Scan/: DAQScan.bat  DAQ_Scan.pyproj  DAQ_Scan.sln  DAQ_Scan_main.py
DAQ_Scan/GUI/: DAQ_Scan_GUI.py  DAQ_Scan_GUI.ui  process_from_QtDesigner_DAQ_Scan_GUI.bat
DAQ_Scan/preset_modes/: preset_Canon_FemtoTEM.xml  preset_Michelson.xml  preset_Mock.xml  preset_holography.xml
DAQ_Scan/setup/: setup.bat
DAQ_Utils/: DAQ_enums.py  DAQ_utils.py  custom_parameter_tree.py  h5browser.pyproj  h5browser.sln  test.h5
DAQ_Utils/Script_Import_Replace/: replace_QtDesRess.py
DAQ_Utils/Tree_layout/: Tree_form.ui  Tree_layout.pyproj  Tree_layout_main.py
DAQ_Utils/plotting/: DAQ_GUI_settings.ui  select_item_tolist.sln  select_item_tolist_GUI.ui
DAQ_Viewer/: DAQ Viewer.bat  DAQ_GUI_settings.ui  DAQ_viewer_main.py  DAQ_viewer_main.pyproj  DAQ_viewer_main.sln  process_from_QtDesigner_DAQ_GUI_settings.bat  utility_classes.py
DAQ_Viewer/setup/: setup.py
Documentation/: API_Main_Modules.rst  API_plugins.rst  APIdoc.rst  DAQ_Measurement.rst  Documentation_index.lnk  Makefile  __init__.py  conf.py  make.bat  missings.txt
Documentation/DAQ_Analysis/: DAQ_analysis_main.py
Documentation/DAQ_Measurement/: DAQ_Measurement_main.py
Documentation/DAQ_Metheor/: DAQ_metheor_main_v3.py
Documentation/DAQ_Move/: DAQ_Move_main.py  hardware.py
Documentation/DAQ_Scan/: DAQ_Scan_main.py
Documentation/DAQ_Utils/: DAQ_utils.py  custom_parameter_tree.py
Documentation/DAQ_Viewer/: DAQ_viewer_main.py  hardware0D.py  hardware1D.py  hardware2D.py  utility_classes.py
Documentation/Schemes/: Class Diagram.dia  Class Diagram_DAQ_Move_details.dia  Class Diagram_DAQ_Move_details.dia~  Class Diagram_DAQ_Utils_details.dia  Class Diagram_DAQ_Viewer_details.dia~  Class Diagram_with superposition.dia~  Main.dia  SCAN_2D.dia  class interaction diagram.dia  class interaction diagram.dia~
Documentation/_templates/: layout.html  links.css
Documentation/html/: API_Utility_Library.html  DAQ_Analysis.html  DAQ_Measurement.html  DAQ_Viewer.html  Description.html  Installation.html  SynthesisDiagram.html  search.html  searchindex.js
Documentation/image/: Main_diagramm.sozi.html  Main_diagramm.sozi.json
docs/: Makefile  conf.py  index.stylelog  make.bat  requirements.txt
docs/src/: __init__.py  about.rst  changelog.rst  conf.py  data_management.rst  developer.rst  features.rst  feedback.rst  glossary.rst  index.rst  quick_start.rst  tutorials.rst  user.rst  whats_new.rst
documentation/: changelog.rst  conf.py  example.csv  index.rst  index.rtc  pictures_import.rst  requirements.txt
documentation/Schemes/: Class Diagram_DAQ_Move_details.dia  Class Diagram_DAQ_Move_details.dia~  Class Diagram_DAQ_Scan_details.dia  Class Diagram_DAQ_Scan_details.dia~  SCAN_2D.dia~
documentation/image/: tcp_ip.odg
documentation/usage/: APIdoc.rst  Contributors.rst  CustomApp.rst  Description.rst  Features.rst  Feedback.rst  How_to_start.rst  Installation.rst  saving.rst  tcpip.rst
notebooks/: Untitled.ipynb  data_analysis_tutorial.ipynb  gaussian_process.ipynb  plotting_data.ipynb
notebooks/analysis_data/: data.h5  data_single.h5
plugins/DAQ_Move_plugins/: DAQ_Move_Mock.py
pymodaq/: False  __init__.py  config_template.toml  daq_logger.py  daq_scan.py  dashboard.py  h5browser.py  pymodaq_exec.py  version.py
pymodaq/DAQ_Analysis/: DAQ_analysis_main.py  __init__.py  daq_analysis_main.py
pymodaq/DAQ_Measurement/: DAQ_Measurement_main.py
pymodaq/DAQ_Move/: DAQ_Move_GUI.py  DAQ_Move_GUI.ui  DAQ_move_main.py  process_from_QtDesigner_DAQ_Move_GUI.bat  utility_classes.py
pymodaq/DAQ_Navigation_Visu/: __init__.py  plotting_2D_images_script.py
pymodaq/DAQ_Scan/: DAQ_scan_main.py
pymodaq/DAQ_Utils/: DAQ_GUI_settings.py  DAQ_utils.py  h5browser.py  manage_preset.py
pymodaq/DAQ_Viewer/: DAQ_GUI_settings.py  DAQ_viewer_main.py  client.py  process_from_QtDesigner_DAQ_GUI_settings.bat  utility_classes.py
pymodaq/Documentation/: API_Utility_Library.rst  Ignore list.txt  README.txt  conf.py  index.html - Raccourci.lnk
pymodaq/QtDesigner_Ressources/: QtDesigner_ressources.bat  QtDesigner_ressources.qrc
pymodaq/daq_analysis/: daq_analysis_main.py
pymodaq/daq_logger/: daq_logger_main.py
pymodaq/daq_measurement/: DAQ_Measurement_main.py  daq_measurement_GUI.py  daq_measurement_GUI.ui  daq_measurement_main.py  process_from_QtDesigner_DAQ_Measurement_GUI.bat
pymodaq/daq_move/: daq_move_gui.py  daq_move_gui.ui  daq_move_main.py  process_from_QtDesigner_DAQ_Move_GUI.bat  utility_classes.py
tests/: config_test.py  daq_scan_test.py  dashboard_test.py  test_daqscan.py  test_dashboard.py
(+1266 files in other folders)
