[build-system]
requires = ["hatchling>=1.9.0",]
build-backend = "hatchling.build"

[project]
name = "pymodaq"
dynamic = [
    "version",
]
description = "Modular Data Acquisition with Python"
readme = "README.rst"
license = { file="LICENSE" }
requires-python = ">=3.7"
authors = [
    { name = "Sébastien Weber", email = "sebastien.weber@cemes.fr" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Other Environment",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Human Machine Interfaces",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: User Interfaces",
]
dependencies = [
    #"docutils==0.17.1",
    "easydict",
    "importlib_metadata; python_version<\"3.8\"",
    "multipledispatch",
    "numpy",
    "packaging",
    "pint",
    "pymodaq_plugin_manager>=0.0.17",
    "pymodaq_plugins_mock",
    "pyqtgraph>=0.12",
    "python-dateutil",
    "qdarkstyle",
    "qtpy",
    "scipy",
    "setuptools>=60",
    "simple_pid",
    "toml",
    "qtconsole",
    "tables<3.9",  # issue with some version of required package blosc2>=2.2.8
]

[project.scripts]
daq_logger = "pymodaq.extensions.daq_logger:main"
daq_move = "pymodaq.control_modules.daq_move:main"
daq_scan = "pymodaq.extensions.daq_scan:main"
daq_viewer = "pymodaq.control_modules.daq_viewer:main"
dashboard = "pymodaq.dashboard:main"
h5browser = "pymodaq.extensions.h5browser:main"
parameter_example = "pymodaq.examples.parameter_ex:main"

[project.urls]
Homepage = "http://pymodaq.cnrs.fr"
Source = "https://github.com/PyMoDAQ/PyMoDAQ"
Tracker = "https://github.com/PyMoDAQ/PyMoDAQ/issues"

[tool.hatch.version]
path = "src/pymodaq/resources/VERSION"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
]
