[build-system]
requires = ["hatchling>=1.9.0", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "pymodaq_gui"
dynamic = [
    "version",
]
description = "User Interface components for PyMoDAQ"
readme = "README.rst"
license = { file="LICENSE" }
requires-python = ">=3.8"
authors = [
    { name = "Sébastien Weber", email = "sebastien.weber@cemes.fr" },
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Other Environment",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Human Machine Interfaces",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: User Interfaces",
]
dependencies = [
    "easydict",
    "importlib_metadata; python_version<\"3.8\"",
    "multipledispatch",
    "numpy < 2.0.0",
    "packaging",
    "pint",
    "pyqtgraph>=0.12",
    "python-dateutil",
    "qdarkstyle",
    "qtpy",
    "scipy",
    "setuptools>=60",
    "toml",
    "pymodaq_utils",
    "pymodaq_data>=5.0.3",
]

[project.scripts]

[project.urls]
Homepage = "http://pymodaq.cnrs.fr"
Source = "https://github.com/PyMoDAQ/pymodaq_gui"
Tracker = "https://github.com/PyMoDAQ/pymodaq_gui/issues"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
]

