[metadata]
name = pymodaq
version = file: src/pymodaq/resources/VERSION
description = Modular Data Acquisition with Python
long_description = file: readme.rst
license = MIT
licence_file = LICENSE
url = http://pymodaq.cnrs.fr
author = Sébastien Weber
author_email = sebastien.weber@cemes.fr
classifiers =
    Programming Language :: Python :: 3
    Development Status :: 5 - Production/Stable
    Environment :: Other Environment
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Human Machine Interfaces
    Topic :: Scientific/Engineering :: Visualization
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: User Interfaces

[options]
py_module = pymodaq
python_requires = >=3.6
install_requires=
    qtpy
    #pyqt5
    numpy
    scipy
    #pyqtgraph>=0.12
    git+https://github.com/seb5g/pyqtgraph
    easydict
    tables
    pymodaq_plugins>=3.0.1
    simple_pid
    python-dateutil
    packaging
    toml
    pymodaq_plugin_manager>=0.0.17
    qdarkstyle
    importlib_metadata; python_version<"3.8"
    multipledispatch
    docutils==0.17.1


package_dir =
    =src
packages = find:
include_package_data = True

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    dashboard=pymodaq.dashboard:main
    daq_scan=pymodaq.daq_scan:main
    daq_logger=pymodaq.daq_logger:main
    daq_viewer=pymodaq.daq_viewer.daq_viewer_main:main
    daq_move=pymodaq.daq_move.daq_move_main:main
    h5browser=pymodaq.h5browser:main
    parameter_example=pymodaq.examples.parameter_ex:main